--- a/05-manipuler_des_donnees.Rmd
+++ b/05-manipuler_des_donnees.Rmd
@@ -52,7 +52,7 @@ prelevementb <- select(
   prelevement, date_prelevement, code_prelevement,
   code_reseau, code_station
 )
-datatable(prelevementb)
+datatable(head(prelevementb))
 
 prelevementb <- select(prelevement, -commentaire)
 names(prelevementb)
@@ -740,6 +740,7 @@ filter(parametre, across(starts_with("date"), ~ .x > "2015-01-01")) %>%
 
 mutate(exercice, across(starts_with("code") & where(is.numeric), as.factor),
                  across(starts_with("date"), as.Date)) %>%
+  slice(1:100) %>% 
   datatable()
 
 summarise(parametre, across(starts_with("code"), n_distinct))
