--- a/03-get_started.Rmd
+++ b/03-get_started.Rmd
@@ -12,14 +12,15 @@ Pourquoi travailler avec les projets Rstudio plutôt que les scripts R ?
 
 - Toujours sur la portabilité, un projet peut être utilisé avec un outil comme `packrat` qui va vous intégrer en interne au projet l'ensemble des packages nécessaires au projet. Cela permet donc à votre collègue à qui vous passez votre projet de ne pas avoir à les installer et, surtout, si vous mettez à jour votre environnement R, votre projet restera toujours avec les versions des packages avec lesquelles vous avez fait tourner votre projet à l'époque. Cela évite d'avoir à subir les effets d'une mise à jour importante d'un package qui casserait votre code.
 
-Pour activer `packrat` sur un projet, aller dans `Tools/Project Options->Packrat`
+Pour activer `renv` sur un projet, il faut l'installer avec `install.packages("renv")`.
+Pour intialiser la sauvegarde des packages employés dans le projet, il faut utiliser
+`renv::init()`
+Les packages chargés dans le projet sont enregistrés dans un sous-dossier dédié.
+En cours de travail sur le projet, la commande `renv::snapshot()` permet de faire une sauvegarde, la commande `renv::restore()` permet de charger la dernière sauvegarde.
 
-[En savoir plus sur Packrat](https://www.rstudio.com/resources/webinars/managing-package-dependencies-in-r-with-packrat/)
+[En savoir plus sur renv](https://blog.rstudio.com/2019/11/06/renv-project-environments-for-r/)
 
-![](images/creerprojet4.png){#id .class width=500}
-
-
-- Cela permet de se forcer à travailler en mode projet : on intègre à un seul endroit tout ce qui est lié à un projet : données brutes, données retravaillées, scripts, illustrations, documentations, publications... et donc y compris les packages avec `packrat`.
+- Cela permet de se forcer à travailler en mode projet : on intègre à un seul endroit tout ce qui est lié à un projet : données brutes, données retravaillées, scripts, illustrations, documentations, publications... et donc y compris les packages avec `renv`.
 
 - On peut travailler sur plusieurs projets en même temps, Rstudio ouvre autant de sessions que de projets dans ce cas.
 
@@ -51,6 +52,22 @@ Cela marche bien quand on a un seul type de données, mais en général on va av
 - Créer un répertoire `/src` ou vous mettrez vos scripts R.
 - Créer un répertoire `/figures` ou vous mettrez vos illustrations issues de R.
 
+## Utilisation du package savoirfR
+
+Pour faciliter le déroulé de ce module, l'ensemble des exercices (énoncés, corrigés et données) a été intégré à un package réalisé par le groupe des référents R: savoirfR
+
+```{r , eval=F}
+remotes::install_github("MTES-MCT/savoirfR")
+```
+
+Pour l'utiliser, il suffit de créer un nouveau projet dans un nouveau répertoire, en sélectionnant le "Project Type" **Exercice Parcours R MTES-MCT**.
+
+![](images/projetsavoirfR1.PNG){#id .class width=500}
+
+Remplissez et sélectionnez le module suivi.
+
+![](images/projetsavoirfR2.PNG){#id .class width=500}
+
 ## Activer les packages nécessaires
 
 Commencer par rajouter un script dans le répertoire `/src` à votre projet qui commencera par : 
@@ -73,16 +90,16 @@ library(rsdmx)
 library(sf)
 library(stringi)
 
-sitadel <- read_excel("data/ROES_201702.xls", sheet = "AUT_REG",
+sitadel <- read_excel("extdata/ROES_201702.xls", sheet = "AUT_REG",
                       col_types = c ("text","text","numeric","numeric","numeric","numeric"))
-load(file = "data/FormationPreparationDesDonnees.RData")
+load(file = "extdata/FormationPreparationDesDonnees.RData")
 
 ```
 
 
 ## Bien structurer ses projets data
 
-Plusieurs documents peuvent vous inspirer sur la structuration de vos projets data par la suite.
+Plusieurs documents peuvent vous inspirer sur la structuration de vos projets *data* par la suite.
 
 En voici quelques-uns : 
 
